# atlassian-netscaler-mcp

./: .envrc.example  .gitignore  LICENSE  README.md  cookie_store.py  jira-server.py  login.py  pyproject.toml  server.py
.github/workflows/: tests.yml
config/: profile.schema.json
config/customers/example/: profile.json
scripts/: mcp-start
tests/: conftest.py  test_cookie_store.py  test_login.py  test_profile_schema.py  test_server.py
